--- a/Templates/index.html
+++ b/Templates/index.html
@@ -51,8 +51,9 @@
         {
             padding: 6px;
             border: none;
-            border-radius: 5px;
-            margin-top: 5px;
+            border-radius: 3px;
+            height:26px;
+            margin: 0 0 5px 0;
             font-size: 17px;
             width:250px;
             background-color: #e1e9ee;
@@ -287,7 +288,7 @@
             <p style="font-size: 13px;">Pratibha Shrivastav,Abhik Sarkar <span style="color:gray;">and 731 other connections follow </span>LinkedIn</p>
             <div class="popup" onclick="myFunction3()" style="float:right;position:relative;top:-32px;">
                 <i style="font-size:24px;color:black;" class="fa">&#xf141;</i>
-                <span class="popuptext" id="myPopup">
+                <span class="popuptext" id="myPopup-1">
                     <ul>
                         <li>List-1</li><br>
                         <li>List-2</li>
@@ -318,30 +319,23 @@
             </div>
         </div>
         <div class="Block" id="Centre-1">
-            <p style="font-size: 13px;">Pratibha Shrivastav,Abhik Sarkar <span style="color:gray;">and 731 other connections follow </span>LinkedIn</p>
-            <div class="popup" onclick="myFunction3()" style="float:right;position:relative;top:-32px;">
+            <div class="popup" onclick="myFunction4()" style="float:right;">
                 <i style="font-size:24px;color:black;" class="fa">&#xf141;</i>
-                <span class="popuptext" id="myPopup">
+                <span class="popuptext" id="myPopup-2">
                     <ul>
                         <li>List-1</li><br>
                         <li>List-2</li>
                     </ul>
                 </span>
             </div>
-            <hr>
-            <i class="fa fa-linkedin nav" style="font-size:30px;margin:3px;"id="Linkedin"></i>
-            <a href='' class="ProfileName">LinkedIn</a>
-            <label class="Followers">12,107,982 followers</label>
-            <label class="Topic">Promoted</label>
-            <a href="" class="Follow">+ Follow</a><br>
-            <p class="Caption">While many industries have been hit hard by COVID-19,some are on rise.Here are ten roles that are in-demand today and the skills to help you land th<span id="dots">...</span><span id="more">e perfect job of your choice </span></p>
-            <button onclick="myFunction2()" id="myBtn" >see more</button>
-            <img src="{% static 'Tech.jpg' %}" style="width:100%;height:auto;">
+            <i class="fa fa-user-circle-o nav" style="font-size:30px;margin:3px;background-color:white;color:black;"id="Linkedin"></i>
+            <a href='' class="ProfileName">Tezi Khan<span style="color:gray;"> . 1st</span></a>
+            <label class="Followers" style="position:relative;left:-98px;">Software Engineer</label>
+            <label class="Topic" style="position:relative;left:-200px;">2d.</label>
+            <p class="Caption">Which CSS framework is good for Angular2 + apart from bootstrap any suggestion??</p>
             <div class="emoji">
                 <img src="{% static 'Emoji-1.png' %}" style="width:20px;height:auto;padding:-2px;">
-                <img src="{% static 'Emoji-2.png' %}" style="width:20px;height:auto;position:relative;">
-                <img src="{% static 'Emoji-3.png' %}" style="width:20px;height:auto;position:relative;">
-                <label style="font-size:16px;position:relative;top:-4px;color:gray;">749 . 11 comment</label>
+                <label style="font-size:16px;position:relative;top:-4px;color:gray;">6 . 8 Comments</label>
                 <hr>
             </div>
             <div class="End-Part">
@@ -351,40 +345,7 @@
                 <a href="" class="link"><i style="font-size:18px;color:rgb(104, 103, 103);" class="fa">&#xf1d9;</i><label class="end-section">Send</label></a>
             </div>
         </div>
-        <div class="Block" id="Centre-1">
-            <p style="font-size: 13px;">Pratibha Shrivastav,Abhik Sarkar <span style="color:gray;">and 731 other connections follow </span>LinkedIn</p>
-            <div class="popup" onclick="myFunction3()" style="float:right;position:relative;top:-32px;">
-                <i style="font-size:24px;color:black;" class="fa">&#xf141;</i>
-                <span class="popuptext" id="myPopup">
-                    <ul>
-                        <li>List-1</li><br>
-                        <li>List-2</li>
-                    </ul>
-                </span>
-            </div>
-            <hr>
-            <i class="fa fa-linkedin nav" style="font-size:30px;margin:3px;"id="Linkedin"></i>
-            <a href='' class="ProfileName">LinkedIn</a>
-            <label class="Followers">12,107,982 followers</label>
-            <label class="Topic">Promoted</label>
-            <a href="" class="Follow">+ Follow</a><br>
-            <p class="Caption">While many industries have been hit hard by COVID-19,some are on rise.Here are ten roles that are in-demand today and the skills to help you land th<span id="dots">...</span><span id="more">e perfect job of your choice </span></p>
-            <button onclick="myFunction2()" id="myBtn" >see more</button>
-            <img src="{% static 'Tech.jpg' %}" style="width:100%;height:auto;">
-            <div class="emoji">
-                <img src="{% static 'Emoji-1.png' %}" style="width:20px;height:auto;padding:-2px;">
-                <img src="{% static 'Emoji-2.png' %}" style="width:20px;height:auto;position:relative;">
-                <img src="{% static 'Emoji-3.png' %}" style="width:20px;height:auto;position:relative;">
-                <label style="font-size:16px;position:relative;top:-4px;color:gray;">749 . 11 comment</label>
-                <hr>
-            </div>
-            <div class="End-Part">
-                <a href="" class="link"><i style="font-size:18px;color:rgb(104, 103, 103);" class="fa">&#xf087;</i><label class="end-section" >Like</label></a>
-                <a href="" class="link"><i style='font-size:18px;color:rgb(104, 103, 103);' class='far'>&#xf4ad;</i><label class="end-section">Comment</label></a>
-                <a href="" class="link"><i style="font-size:18px;color:rgb(104, 103, 103);" class="fa">&#xf064;</i><label class="end-section">Share</label></a>
-                <a href="" class="link"><i style="font-size:18px;color:rgb(104, 103, 103);" class="fa">&#xf1d9;</i><label class="end-section">Send</label></a>
-            </div>
-        </div>
+        
         <div class="Block" id="Right-aligned">
             
         </div>
@@ -426,8 +387,14 @@
     }
     function myFunction3() 
     {
-        var popup = document.getElementById("myPopup");
+        var popup = document.getElementById("myPopup-1");
         popup.classList.toggle("show");
     }
+    function myFunction4() 
+    {
+        var popup = document.getElementById("myPopup-2");
+        popup.classList.toggle("show");
+    }
+    
 </script>
 </html>
